--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
 *{
     padding: 0;margin: 0;box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;overflow: none;
 }
 
 .logo{width: 20%;}
 .logo img{width: 90%;}
 .navbar-collapse{display: flex;justify-content: flex-end;}
 .nav-link{color: #4b4848;font-size: 12px;font-weight: 500;margin-right: 15px;}
-.navsection{background: #f0fff0;padding: 0 60px;max-width: 100%;}
+.navsection{background: #f0fff0;padding: 0 40px;min-width: 100%;}
 
 .cover{
     background-color: #f0fff0;
-    padding: 50px 80px;
-    height: 70vh;
-    max-width: 100%;
+    padding: 70px 60px;
+    height: 100vh;
+    min-width: 100%;
 }
+
 .cover h1{line-height: 3.2rem;font-weight: bolder;}
 .cover span{color: #3ab47d;}
 .red{color: #e2480b;margin-bottom: 10px;font-size: 13px;}
@@ -42,18 +43,15 @@
     font-size: 12px;
 }
 /* ---------------------- */
-.book-std .p-2{
+ .hovers{
     text-align: center;
-    
     border-radius: 5px;
-    display: inline;
-    margin-right: 25px;
     padding-top: 10px;
     padding-bottom: 10px;
     transition: 1s;
     cursor: pointer;
 }
-.p-2:hover{
+.hovers:hover{
     transform: scale(1.1);
     box-shadow: 5px 5px 15px #777;
 }
@@ -115,7 +113,7 @@
 
 .testimonial h3{font-weight: bold;margin: 30px 0;}
 .testimonial img{width: 13%;}
-.testimonial{position: relative;left:25px ;width: 600px;padding: 20px 0 60px 0;}
+.testimonial{position: relative;left:25px ;max-width: 600px;padding: 20px 0 60px 0;}
 .testimonial p{font-size: 11px;margin: 0 30px;line-height: 20px;font-weight: 500;}
 
 /* ------------ */
@@ -135,6 +133,39 @@
     padding: 25px 0;
 }
 .last-ft small{font-size: 11px;}
+.footer-col{margin-bottom: 50px;}
 
 
+@media only screen and (max-width: 760px) {
+    .cover{
+        background-color: #f0fff0;
+        
+    }
+
+    .logo img{width: 100%;}
+}
+
+@media only screen and (max-width: 560px) {
+    .book-std h6{font-size: 20px;}
+    .book-std small{font-size: 15px;}
+    .book-std img{width: 30%;}
+    .book-std div{margin-bottom: 40px;}
+    .testimonial img{width: 20%;}
+}
+
+@media only screen and (max-width: 575px) {
+    .footer-row{
+       text-align: center;
+    }
+    .logo img{
+        width: 190%;
+    }
+}
+@media only screen and (max-width: 375px) {
+    .right-img{padding-top: 25px;}
+    .logo img{
+        width: 220%;
+    }
+    .testimonial img{width: 20%;}
+}
 
